add html, styling, and responsive design to popular articles

--- a/index.html
+++ b/index.html
@@ -94,6 +94,45 @@
 				</header>
 			</article>
 		</section>
+		<section class="popularArticles">
+			<div class="popularHeading">
+				<h3>
+					Popular Articles Today
+				</h3>
+			</div>
+			<ol>
+				<li class="popularArticle">
+					<a class="popularLink" target="_blank">
+						<span class="trendingIndex">1</span>
+						<h4 class="popularTitle">Google’s ‘Self Share’ tool could make you stop emailing yourself files</h4>
+					</a>
+				</li>
+				<li class="popularArticle">
+					<a class="popularLink" target="_blank">
+						<span class="trendingIndex">2</span>
+						<h4 class="popularTitle">Cryptobros splash millions on rare ‘Dune’ book, think they own the copyright</h4>
+					</a>
+				</li>
+				<li class="popularArticle">
+					<a class="popularLink" target="_blank">
+						<span class="trendingIndex">3</span>
+						<h4 class="popularTitle">Alphabet to spin out quantum company after Google’s time crystal breakthrough</h4>
+					</a>
+				</li>
+				<li class="popularArticle">
+					<a class="popularLink" target="_blank">
+						<span class="trendingIndex">4</span>
+						<h4 class="popularTitle">Many startup accelerators fail. Here’s how to find the right one</h4>
+					</a>
+				</li>
+				<li class="popularArticle">
+					<a class="popularLink" target="_blank">
+						<span class="trendingIndex">5</span>
+						<h4 class="popularTitle">Can NFTs be art? Wikipedia isn’t sure — and crypto bros are terrified</h4>
+					</a>
+				</li>
+			</ol>
+		</section>
 	</main>
 </body>
 
