add styling, html, and responsive design to latest stories

--- a/index.html
+++ b/index.html
@@ -133,6 +133,85 @@
 				</li>
 			</ol>
 		</section>
+		<section class="latestStories">
+			<div class="latestHeading">
+				<h1>Latest Stories</h1>
+			</div>
+			<ul class="latestGrid">
+				<li>
+					<a class="latestStory" target="_blank">
+						<img class="latestThumbnail" alt="story thumbnail" src="https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2021%2F12%2Felon-burn-money.jpg&signature=d0f543837883398b7f24d9fab2dc1891">
+						<div class="latestContext">
+							<h6 class="latestTag">Neural</h6>
+							<h4 class="latestTitle">Did Elon Musk forget about OpenAI or is he just trolling his dumbest fans?</h4>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="latestStory" target="_blank">
+						<img class="latestThumbnail" alt="story thumbnail" src="https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F01%2FUntitled-design-2022-01-19T151953.804.jpg&signature=06e7a6ee0a5cfed1f6761ee30e72f0cc">
+						<div class="latestContext">
+							<h6 class="latestTag">Shift</h6>
+							<h4 class="latestTitle">Rimac’s selling its hypercar EV tech to other automakers</h4>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="latestStory" target="_blank">
+						<img class="latestThumbnail" alt="story thumbnail" src="https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F01%2Frsz_2untitled_design_4.png&signature=7c645d66e1f7d9947bbaba659368646f">
+						<div class="latestContext">
+							<h6 class="latestTag">Shift</h6>
+							<h4 class="latestTitle">This car can (probably) mine crypto and we’re not sure that’s a good thing</h4>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="latestStory" target="_blank">
+						<img class="latestThumbnail" alt="story thumbnail" src="https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F01%2FGoogle-Apple-big-tech.jpg&signature=3cf45998d128f55081cee844b510c79f">
+						<div class="latestContext">
+							<h6 class="latestTag">Plugged</h6>
+							<h4 class="latestTitle">Monopoly in jeopardy: The two US bills that have Big Tech worried</h4>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="latestStory" target="_blank">
+						<img class="latestThumbnail" alt="story thumbnail" src="https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F01%2FTonga-island-hed.jpg&signature=2e385f8d2a760916cf21d96dec83b171">
+						<div class="latestContext">
+							<h6 class="latestTag">Insights</h6>
+							<h4 class="latestTitle">The Tonga volcanic disaster shows we need to rethink telecom infrastructure</h4>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="latestStory" target="_blank">
+						<img class="latestThumbnail" alt="story thumbnail" src="https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F01%2Feinstein.jpeg&signature=d96ab30a2c88e1d63ead0adb89815f51">
+						<div class="latestContext">
+							<h6 class="latestTag">Neural</h6>
+							<h4 class="latestTitle">100 years of quantum physics: From 1920s theories to mind-bending computers of 2020</h4>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="latestStory" target="_blank">
+						<img class="latestThumbnail" alt="story thumbnail" src="https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F01%2Freplikaskull.jpg&signature=6f6382a592fe55f0a3a0ba06ed44c655">
+						<div class="latestContext">
+							<h6 class="latestTag">Neural</h6>
+							<h4 class="latestTitle">Confused Replika AI users are standing up for bots and trying to bang the algorithm</h4>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="latestStory" target="_blank">
+						<img class="latestThumbnail" alt="story thumbnail" src="https://img-cdn.tnwcdn.com/image?fit=285%2C150&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F01%2FExynos-2200-copy.jpg&signature=5ec0fe13b16894741276b009cf84c2be">
+						<div class="latestContext">
+							<h6 class="latestTag">Plugged</h6>
+							<h4 class="latestTitle">Samsung’s Exynos 2200 brings ray tracing to phones — here’s why that matters</h4>
+						</div>
+					</a>
+				</li>
+			</ul>
+		</section>
 	</main>
 </body>
 
