--- a/index.html
+++ b/index.html
@@ -211,6 +211,14 @@
 					</a>
 				</li>
 			</ul>
+			<div class="allNewsDiv">
+				<button class="allNews">
+					All News
+					<span class="material-icons-outlined allNewsForward">
+						arrow_forward_ios
+					</span>
+				</button>
+			</div>
 		</section>
 	</main>
 </body>
