add html, styling, and responsive design to explore channels

--- a/index.html
+++ b/index.html
@@ -220,6 +220,43 @@
 				</button>
 			</div>
 		</section>
+		<section class="exploreChannels">
+			<h2 class="exploreHeading">
+				Explore our channels
+			</h2>
+			<div class="genreCards">
+				<article class="genreCard pluggedCard">
+					<div class="genre">
+						<img class="genreTag" alt="Plugged" src="https://next.tnwcdn.com/assets/next/img/placeholder/media/plugged.svg">
+					</div>
+					<h4 class="genreInfo">Your sardonic source for consumer tech stories</h4>
+				</article>
+				<article class="genreCard neuralCard">
+					<div class="genre">
+						<img class="genreTag" alt="Neural" src="https://next.tnwcdn.com/assets/next/img/placeholder/media/neural.svg">
+					</div>
+					<h4 class="genreInfo">Human-centric AI news and analysis</h4>
+				</article>
+				<article class="genreCard shiftCard">
+					<div class="genre">
+						<img class="genreTag" alt="Shift" src="https://next.tnwcdn.com/assets/next/img/placeholder/media/shift.svg">
+					</div>
+					<h4 class="genreInfo">Driving the future of sustainable mobility</h4>
+				</article>
+				<article class="genreCard growthCard">
+					<div class="genre">
+						<img class="genreTag" alt="Growth Quarters" src="https://next.tnwcdn.com/assets/next/img/placeholder/media/growth-quarters.svg">
+					</div>
+					<h4 class="genreInfo">No-nonsense perspectives on startup growth</h4>
+				</article>
+				<article class="genreCard forkCard">
+					<div class="genre">
+						<img class="genreTag" alt="Hard Fork" src="https://next.tnwcdn.com/assets/next/img/placeholder/media/hardfork.svg">
+					</div>
+					<h4 class="genreInfo">Inside money, markets, and Big Tech</h4>
+				</article>
+			</div>
+		</section>
 	</main>
 </body>
 
