add styling, html, and responsive design to videos

--- a/index.html
+++ b/index.html
@@ -285,16 +285,64 @@
 			<div class="watchHeading">
 				<h2>Watch what we made you</h2>
 			</div>
-			<div class="mainVideo">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/S1-wuoFsdT4" title="YouTube video player"
-					frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-					allowfullscreen>
-				</iframe>
-				<div class="mainVideoContext">
-					<h3 class="mainVideoTitle">
-							Nothing Ear (1) review: Style... and substance?
-					</h3>
-					<span class="views">Jul 30, 2021</span>
+			<div class="videos">
+				<div class="mainVideo">
+					<iframe class="mainActualVideo" width="560" height="315" src="https://www.youtube.com/embed/S1-wuoFsdT4" title="YouTube video player"
+						frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen>
+					</iframe>
+					<div class="mainVideoContext">
+						<h3 class="mainVideoTitle">
+								Nothing Ear (1) review: Style... and substance?
+						</h3>
+						<span class="mainVideoViews">Jul 30, 2021</span>
+					</div>
+				</div>
+				<div class="otherVideosDiv">
+					<div class="otherVideos">
+						<div class="otherVideo">
+							<img class="otherVideoImage" alt="video thumbnail" src="https://i.ytimg.com/vi/S1-wuoFsdT4/hqdefault.jpg">
+							<h4 class="otherVideoTitle">
+								Nothing Ear (1) review: Style... and substance?
+							</h4>
+						</div>
+						<div class="otherVideo">
+							<img class="otherVideoImage" alt="video thumbnail" src="https://i.ytimg.com/vi/kIie5LVh7NE/hqdefault.jpg">
+							<h4 class="otherVideoTitle">
+								What size iPad Pro should you buy?
+							</h4>
+						</div>
+						<div class="otherVideo">
+							<img class="otherVideoImage" alt="video thumbnail" src="https://i.ytimg.com/vi/3Gpmto2eoro/hqdefault.jpg">
+							<h4 class="otherVideoTitle">
+								Apple AirTags review: The Find My Revolution
+							</h4>
+						</div>
+						<div class="otherVideo">
+							<img class="otherVideoImage" alt="video thumbnail" src="https://i.ytimg.com/vi/UAu4d0K99Vc/hqdefault.jpg">
+							<h4 class="otherVideoTitle">
+								Sonos Roam review: Smart speaker, smarter business
+							</h4>
+						</div>
+						<div class="otherVideo">
+							<img class="otherVideoImage" alt="video thumbnail" src="https://i.ytimg.com/vi/0OXyJygPSRI/hqdefault.jpg">
+							<h4 class="otherVideoTitle">
+								Learning guitar is better than meditation
+							</h4>
+						</div>
+						<div class="otherVideo">
+							<img class="otherVideoImage" alt="video thumbnail" src="https://i.ytimg.com/vi/FAx1wjv2jEE/hqdefault.jpg">
+							<h4 class="otherVideoTitle">
+								Why your hi-fi setup needs these headphones
+							</h4>
+						</div>
+						<div class="otherVideo">
+							<img class="otherVideoImage" alt="video thumbnail" src="https://i.ytimg.com/vi/jAIdYernX0w/hqdefault.jpg">
+							<h4 class="otherVideoTitle">
+								CDs: Forgotten, but still amazing
+							</h4>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
