--- a/index.html
+++ b/index.html
@@ -346,6 +346,83 @@
 				</div>
 			</div>
 		</section>
+		<section class="workWithUs">
+			<div class="mainWork">
+				<div class="leftMain">
+					<h6 class="workSubheading">Reach your goals</h6>
+					<h2 class="workHeading">Work With Us</h2>
+					<p class="workPara">TNW takes center stage in the tech industry, offering creative media campaigns, sizzling tech
+						events, bespoke innovation
+						programs, and prime office locations in Amsterdam. Want to engage your audience more effectively, innovate your
+						business, and position your brand in front of a digital-savvy audience?</p>
+					<button class="workButton">Get in touch</button>
+				</div>
+				<div class="rightMain">
+					<div class="workLinksDiv">
+						<div class="workLinks">
+							<img class="workLinksImage" alt="work link image" src="https://s3.amazonaws.com/events.tnw/hardfork-2018/uploads/visuals/pillar-media.svg">
+							<h4 class="workLinksHeading">Media</h4>
+						</div>
+						<div class="workLinks">
+							<img class="workLinksImage" alt="work link image" src="https://s3.amazonaws.com/events.tnw/hardfork-2018/uploads/companies/pillar-events.svg">
+							<h4 class="workLinksHeading">Events</h4>
+						</div>
+						<div class="workLinks">
+							<img class="workLinksImage" alt="work link image" src="https://s3.amazonaws.com/events.tnw/hardfork-2018/uploads/visuals/pillar-spaces.svg">
+							<h4 class="workLinksHeading">Spaces</h4>
+						</div>
+						<div class="workLinks">
+							<img class="workLinksImage" alt="work link image" src="https://s3.amazonaws.com/events.tnw/hardfork-2018/uploads/companies/pillar-programs.svg">
+							<h4 class="workLinksHeading">Programs</h4>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="workCompanies">
+				<ul>
+					<li class="companyContainer">
+						<a class="companyLink" alt="" target="_blank" href="">
+							<img class="companyImage" alt="Google" src="https://next.tnwcdn.com/assets/next/img/partners/google.svg">
+						</a>
+					</li>
+					<li class="companyContainer">
+						<a class="companyLink" alt="" target="_blank" href="">
+							<img class="companyImage" alt="eToro" src="https://next.tnwcdn.com/assets/next/img/partners/etoro.svg">
+						</a>
+					</li>
+					<li class="companyContainer">
+						<a class="companyLink" alt="" target="_blank" href="">
+							<img class="companyImage" alt="IBM" src="https://next.tnwcdn.com/assets/next/img/partners/ibm.svg">
+						</a>
+					</li>
+					<li class="companyContainer">
+						<a class="companyLink" alt="" target="_blank" href="">
+							<img class="companyImage" alt="Microsoft" src="https://next.tnwcdn.com/assets/next/img/partners/microsoft.svg">
+						</a>
+					</li>
+					<li class="companyContainer">
+						<a class="companyLink" alt="" target="_blank" href="">
+							<img class="companyImage" alt="PayPal" src="https://next.tnwcdn.com/assets/next/img/partners/paypal.svg">
+						</a>
+					</li>
+					<li class="companyContainer">
+						<a class="companyLink" alt="" target="_blank" href="">
+							<img class="companyImage" alt="Vodafone" src="https://next.tnwcdn.com/assets/next/img/partners/vodafone.svg">
+						</a>
+					</li>
+					<li class="companyContainer">
+						<a class="companyLink" alt="" target="_blank" href="">
+							<img class="companyImage" alt="Accenture" src="https://next.tnwcdn.com/assets/next/img/partners/accenture.svg">
+						</a>
+					</li>
+					<li class="companyContainer">
+						<a class="companyLink" alt="" target="_blank" href="">
+							<img class="companyImage" alt="McKinsey&Company" src="https://next.tnwcdn.com/assets/next/img/partners/mckinsey-company.svg">
+						</a>
+					</li>
+				</ul>
+			</div>
+		</section>
 	</main>
 </body>
 
